--- a/TapWinners/app/src/main/AndroidManifest.xml
+++ b/TapWinners/app/src/main/AndroidManifest.xml
@@ -15,15 +15,20 @@
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".PlayActivity"></activity>
-    </application>
+        <activity android:name=".LoginActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".PlayActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ChatRoomActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden"/>
+    </application>android:screenOrientation="portrait"
 
 </manifest>
