add show score when game finish

--- a/TapWinners/app/src/main/AndroidManifest.xml
+++ b/TapWinners/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             android:value="@string/facebook_app_id" />
 
         <activity
-            android:name="kmitl.finalproject.nattapon58070036.tapwinner.WelcomeActivity"
+            android:name=".WelcomeActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,30 +24,27 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
         <activity
-            android:name="kmitl.finalproject.nattapon58070036.tapwinner.MainActivity"
-            android:screenOrientation="portrait" />
-
-        <activity
-            android:name="kmitl.finalproject.nattapon58070036.tapwinner.LoginActivity"
+            android:name=".MainActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="kmitl.finalproject.nattapon58070036.tapwinner.PlayActivity"
+            android:name=".LoginActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="kmitl.finalproject.nattapon58070036.tapwinner.ChatRoomActivity"
+            android:name=".PlayActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ChatRoomActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden" />
-        <activity android:name="kmitl.finalproject.nattapon58070036.tapwinner.ScoreBoardActivity" />
+        <activity android:name=".ScoreBoardActivity" />
 
-        <service android:name="kmitl.finalproject.nattapon58070036.tapwinner.service.FirebaseMessagingService">
+        <service android:name=".service.FirebaseMessagingService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-        <service android:name="kmitl.finalproject.nattapon58070036.tapwinner.service.MyFirebaseInstanceIDService">
+        <service android:name=".service.MyFirebaseInstanceIDService">
             <intent-filter>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
@@ -63,7 +60,7 @@
             android:name="com.google.firebase.messaging.default_notification_color"
             android:resource="@color/colorPrimary" />
 
-
+        <activity android:name=".CurrentScoreActivity"></activity>
     </application>
 
 </manifest>
