--- a/TapWinners/app/build.gradle
+++ b/TapWinners/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "kmitl.finalproject.nattapon58070036.tapwinner"
         minSdkVersion 19
         targetSdkVersion 26
-        versionCode 6
-        versionName "6.1"
+        versionCode 8
+        versionName "8.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -20,6 +20,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.android.support:support-v4:26.1.0'
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
