--- a/TapWinners/build.gradle
+++ b/TapWinners/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         mavenCentral()
         maven {
             url "https://maven.google.com"
+
         }
     }
     dependencies {
@@ -24,6 +25,7 @@ allprojects {
         maven {
             url "https://maven.google.com"
         }
+        maven { url "https://jitpack.io" }
     }
 }
 
