--- a/TapWinners/app/build.gradle
+++ b/TapWinners/app/build.gradle
@@ -52,6 +52,8 @@ dependencies {
 
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-intents:3.0.1'
+    androidTestImplementation 'com.android.support.test.uiautomator:uiautomator-v18:2.1.1'
 }
 apply plugin: 'com.google.gms.google-services'
 
